# gateway

./: .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: gateway-deploy-prod.yml  gateway-docker.yml  gateway-tests.yml
alembic/versions/: a1b2c3d4e5f6_add_effective_at_to_model_pricing.py
demo/code-exec/: demo_flow.sh  start.sh  stop.sh
docs/public/: openapi.json
infra/sandbox-image/: Dockerfile  Makefile  README.md  pyproject.toml
scripts/: docker_liveness_check.sh
src/gateway/: main.py  metrics.py  rate_limit.py  streaming.py
tests/gateway/: conftest.py  test_atomic_spend_update.py  test_budget_race_condition.py  test_budget_reset.py  test_cache_control_headers.py  test_client_args.py  test_config_env_loading.py  test_cors_configuration.py  test_env_var_resolution.py  test_find_model_pricing.py  test_global_state_reset.py  test_key_management.py  test_log_usage_commit_scope.py  test_messages_endpoint.py  test_metrics.py  test_pricing_budget_validation.py  test_pricing_config.py  test_provider_kwargs_override.py  test_rate_limiting.py  test_shared_helpers.py  test_stream_options_injection.py  test_streaming_generator.py  test_streaming_token_aggregation.py  test_timezone_consistency.py  test_transaction_safety.py  test_usage_tracking.py  test_user_budget.py  test_user_delete_preserve_logs.py  test_vertex_credential_cleanup.py
tests/integration/: test_budget_reset.py  test_client_args.py  test_config_env_loading.py  test_key_management.py  (+19 more)
(+44 files in other folders)
